--- a/EducationUSA/Base.lproj/SettingModule.storyboard
+++ b/EducationUSA/Base.lproj/SettingModule.storyboard
@@ -10,6 +10,9 @@
         <array key="Archivo-Bold.ttf">
             <string>Archivo-Bold</string>
         </array>
+        <array key="HelveticaNeue.ttc">
+            <string>HelveticaNeue</string>
+        </array>
         <array key="Roboto-Bold_A.ttf">
             <string>Roboto-Bold</string>
         </array>
@@ -329,7 +332,7 @@
                                                         <action selector="chatClicked:" destination="Aev-Dn-JCb" eventType="touchUpInside" id="s5C-yd-djL"/>
                                                     </connections>
                                                 </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Advisers are available from 8 AM – 4:30 PM, Sunday through Thursday" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5f-o3-RWf">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Advisers are available from 9 AM – 4 PM, Sunday through Thursday" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G5f-o3-RWf">
                                                     <rect key="frame" x="29.5" y="77.5" width="315.5" height="29"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
